<resources>
    <string name="app_name">John McDonald</string>
    <string name="btn_name">Follow</string>
    <string name="post_name">Posts</string>
    <string name="follower_name">Followers</string>
    <string name="text_about">About</string>
    <string name="text_description">Him poetic eye.Searched any remedies.
    Trial.Was provely a schemes him the dressing mountains and as surprise haven\'t
    subject and could a entered would in the of be not post,doing the never publication legs.</string>
</resources>
