<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ImageView
        android:id="@+id/arrow_back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:background="@color/green"
        />
    <ImageView
        android:id="@+id/vert_back"
        android:background="@color/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_more_vert_black"
        android:layout_marginRight="12dp"

        />
    <TextView
        android:id="@+id/txt_name"
        app:layout_constraintTop_toBottomOf="@+id/arrow_back"
        app:layout_constraintLeft_toLeftOf="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="John McDonald"
        android:textStyle="bold"
        android:textSize="@dimen/text_name"
        android:layout_marginTop="50dp"/>
    <ImageView
        android:id="@+id/img_location"
        android:src="@drawable/ic_place_black"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        app:layout_constraintLeft_toLeftOf="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        />
    <TextView
        android:id="@+id/txt_location"
        android:text="Los Angles,CA"
        android:textSize="@dimen/text_location"
        app:layout_constraintLeft_toRightOf="@+id/img_location"
        app:layout_constraintBottom_toBottomOf="@+id/img_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:id="@+id/img_john"
        android:src="@drawable/john"
        app:layout_constraintTop_toBottomOf="@+id/vert_back"
        android:layout_marginLeft="22dp"
        app:layout_constraintLeft_toRightOf="@+id/txt_name"
        android:layout_width="100dp"
        android:layout_height="200dp"/>

    <Button
        android:id="@+id/btn_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_name"
        app:layout_constraintTop_toBottomOf="@+id/img_location"
        app:layout_constraintLeft_toLeftOf="@+id/arrow_back"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundedbutton"
        android:textColor="@color/btn_color"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/post_count"
        app:layout_constraintTop_toBottomOf="@+id/btn_follow"
        app:layout_constraintLeft_toLeftOf="@id/img_location"
        android:text="34"
        android:textStyle="bold"
        android:textSize="@dimen/text_location"
        android:layout_marginTop="12dp"/>
    <TextView
        android:id="@+id/post_name"
        app:layout_constraintTop_toBottomOf="@+id/post_count"
        app:layout_constraintLeft_toLeftOf="@+id/post_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_name"/>
    <TextView
        android:id="@+id/follower_count"
        app:layout_constraintBaseline_toBaselineOf="@+id/post_count"
        app:layout_constraintLeft_toRightOf="@+id/post_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1256"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/follower_name"
        app:layout_constraintTop_toBottomOf="@+id/follower_count"
        app:layout_constraintLeft_toLeftOf="@+id/follower_count"
        android:text="@string/follower_name"/>
    <ImageView
        android:id="@+id/image1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:minWidth="100dp"
        app:layout_constraintTop_toBottomOf="@+id/post_name"
        app:layout_constraintLeft_toLeftOf="@id/arrow_back"
        android:src="@drawable/los_angles_two"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintRight_toLeftOf="@+id/image2"/>
    <ImageView
        android:id="@+id/image2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/post_name"
        app:layout_constraintLeft_toRightOf="@+id/image1"
        app:layout_constraintRight_toLeftOf="@+id/image3"
        android:src="@drawable/los_angles_four"/>
    <ImageView
        android:id="@+id/image3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/post_name"
        app:layout_constraintLeft_toRightOf="@+id/image2"
        android:src="@drawable/los_angles_one"/>
    <ImageView
        android:id="@+id/image4"
        app:layout_constraintTop_toBottomOf="@+id/post_name"
        app:layout_constraintLeft_toRightOf="@+id/image3"
        android:layout_marginRight="12dp"
        android:src="@drawable/los_angles_three"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <ImageView
        android:id="@+id/icon1"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintRight_toLeftOf="@+id/icon2"
        app:layout_constraintTop_toBottomOf="@+id/image1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/facebook"
        />
    <ImageView
        android:id="@+id/icon2"
        app:layout_constraintTop_toBottomOf="@+id/image2"
        app:layout_constraintLeft_toRightOf="@+id/icon1"
        app:layout_constraintRight_toLeftOf="@+id/icon3"
        android:src="@drawable/linkin"
        android:layout_width="24dp"
        android:layout_height="24dp"/>
    <ImageView
        android:id="@+id/icon3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@+id/image3"
        app:layout_constraintLeft_toRightOf="@+id/icon2"
        app:layout_constraintRight_toLeftOf="@+id/icon4"
        android:src="@drawable/instragram"/>
    <ImageView
        android:id="@+id/icon4"
        app:layout_constraintTop_toBottomOf="@+id/image4"
        app:layout_constraintLeft_toRightOf="@+id/icon3"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/black_twitter"/>
    <ImageView
        android:id="@+id/line"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/icon1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/baseline"
        android:src="@drawable/baseline"/>
    <TextView
        android:id="@+id/txt_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_about"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/icon1"
        app:layout_constraintLeft_toLeftOf="@+id/arrow_back"
        />
    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_about"
        app:layout_constraintLeft_toLeftOf="@+id/arrow_back"
        android:layout_marginLeft="12dp"
        android:textSize="12sp"
        android:text="@string/text_description"/>



</androidx.constraintlayout.widget.ConstraintLayout>